<resources>
    <string name="app_name">Life Streaming Radio</string>
    <string name="channel_name">Radio Playback</string>
    <string name="channel_description">Radio Online JKI Injil Keselamatan</string>
    <string name="channel_description_settings">This service is used to keep the radio playing in background process</string>
    <string name="running_text">berbagi kehidupan,\nbersama bertumbuh dewasa\ndalam kristus</string>
    <string name="status_on_air">● ON AIR</string>
    <string name="status_offline">● OFFLINE</string>
    <string name="msg_station_offline">Siaran sedang offline. Coba lagi nanti.</string>
    <string name="sleep_timer_title">Sleep timer</string>
    <string name="sleep_timer_off">Matikan timer</string>
    <string name="sleep_timer_minutes">%d menit</string>
    <string name="sleep_timer_remaining">%d mnt</string>
    <string name="cd_play">Putar radio</string>
    <string name="cd_pause">Jeda radio</string>
    <string name="cd_cast">Putar di perangkat lain</string>
    <string name="cd_sleep_timer">Sleep timer</string>
    <string name="cast_sheet_title">Putar di TV atau speaker</string>
    <string name="cast_sheet_searching">Mencari perangkat…</string>
    <string name="cast_sheet_searching_hint">Mencari perangkat… Pastikan TV atau speaker terhubung ke Wi-Fi yang sama dengan HP ini.</string>
    <string name="cast_sheet_no_devices">Tidak ada TV atau speaker yang ditemukan. Pastikan perangkatnya menyala dan terhubung ke Wi-Fi yang sama dengan HP ini.</string>
    <string name="cast_sheet_connecting">Menghubungkan…</string>
    <string name="cast_sheet_playing_here">Radio sedang diputar di sini</string>
    <string name="cast_sheet_volume">Volume</string>
    <string name="cast_sheet_stop">Hentikan casting</string>
</resources>
